# Banco-Horas-Metal

./: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish.yml  rust.yml
src/: App.svelte  main.ts  routes.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: android.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/consts/: database.rs
src-tauri/src/controllers/: checkpoint.rs  configuration.rs  mod.rs  register.rs
src-tauri/src/models/: checkpoint.rs  configuration.rs  mod.rs  register.rs
src-tauri/src/persistence/: sqlite_manager.rs
src/components/: BackendSetupState.svelte  CreateEntry.svelte  EntryDetail.svelte  HistoricalSummary.svelte  HourTable.svelte  SaveCheckpoint.svelte  Summary.svelte  UpdateEntry.svelte
src/components/Navbar/: Navbar.svelte
src/lib/calc_info/: calc_info.ts
src/models/: Checkpoint.ts  Config.ts  Entry.ts
src/pages/: Configs.svelte  EntriesPage.svelte  HistoricalSummary.svelte  NotFound.svelte
src/stores/: Checkpoints.ts  Configs.ts  Entries.ts  Setup.ts
src/types/: brazilianholiday.d.ts
