[package]
name = "banco-horas-metal"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "banco_horas_metal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
glob = { version = "0.3" }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-sql = { version = "2.0.0-beta", features = ["sqlite"] }
tauri-plugin-shell = { version = "2.0.0-beta", features = [] }
serde_json = "1.0"
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-async-std-rustls", "macros" ] }
async-std = { version = "1.12", features = [ "attributes" ] }
anyhow = { version = "1.0" }
chrono = { version = "0.4" }
serde = { version = "1.0" }
lazy_static = { version = "1.4" }
log = "0.4"
tauri-plugin-log = { version = "2.0.0-beta", features = ["colored"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2.0.0-beta"
